# ffmpeg

./: README.md
app/: CMakeLists.txt  build.gradle
app/src/androidTest/java/com/luban/myapplication/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: AudioChannel.cpp  AudioChannel.h  BaseChannel.cpp  BaseChannel.h  BaseFFmpeg.cpp  BaseFFmpeg.h  JavaCallHelper.cpp  JavaCallHelper.h  VideoChannel.cpp  VideoChannel.h  macro.h  native-lib.cpp  safe_queue.h
app/src/main/java/com/luban/myapplication/: LubanPlayer.java  MainActivity.java
app/src/main/res/layout/: activity_main.xml
app/src/test/java/com/luban/myapplication/: ExampleUnitTest.java
